fix: fix ugly spacing in about page text content

--- a/src/routes/styles.css
+++ b/src/routes/styles.css
@@ -19,6 +19,22 @@ a {
     }
 }
 
+p {
+    text-align: justify;
+
+    &:first-of-type {
+        margin-top: 0;
+    }
+
+    &:last-of-type {
+        margin-bottom: 0;
+    }
+}
+
+li + li {
+    margin-top: 1em;
+}
+
 .adaptive-row {
     display: flex;
     flex-direction: row;
